# Eter_With_QT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  source.cpp
Eter/: Board.h  Eter.sln  Eter.vcxproj  Eter.vcxproj.filters
Eter_UI/: BoardCell.cpp  BoardCell.h  CMakeLists.txt  CardLabel.cpp  CardLabel.h  Eter.vcxproj  Eter.vcxproj.filters  Eter_UI.cpp  Eter_UI.h  Eter_UI.qrc  Eter_UI.sln  Eter_UI.ui  Eter_UI.vcxproj  Eter_UI.vcxproj.filters  main.cpp  packages.config
Eter_UI/New folder/: BoardCell.cpp  BoardCell.h  CardLabel.h  Eter_UI.cpp
Eter_UI/New folder/models/Actions/: Card.cpp  Card.h
Eter_UI/New folder/models/GameMechanics/: Board.h  Game.h  Match.h
Eter_UI/models/Actions/: Explosion.cpp  Power.cpp
Eter_UI/models/GameMechanics/: Board.cpp  Game.cpp  Match.cpp
Eter_UI/models/Player/: Player.cpp
SavedGames/: backup_2025-01-19_23-29-12.json  backup_2025-01-20_00-59-04.json  test.json
models/: Board.cpp  Board.h  Card.cpp  Card.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  IBoard.h  ICard.h  IGame.h  IPlayer.h  Match.cpp  Match.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Power.cpp  Power.h  Wizard.cpp  Wizard.h
models/Actions/: Card.cpp  Card.h  Explosion.h  Piece.cpp  Piece.h  Power.cpp  Power.h  Wizard.cpp  Wizard.h
models/Actions/Explosion/: CMakeLists.txt  Explosion.cpp  Explosion.h
models/GameMechanics/: Board.cpp  Board.h  Game.cpp  Game.h  GameEndInfo.h  Match.cpp  Match.h  Matrix.h
models/Player/: Player.cpp  Player.h
models/cards/: Card.h  Wizard.cpp  Wizard.h
modules/: Card.cpp  Card.h  Card.ixx  Wizard.h  Wizard.ixx
modules/wizards_powers/: Wizards.h
utils/: constants.h
wizards_powers/: Wizards.cpp
